@@ -1,5 +1,15 @@
 package eu.europeana.indexing;
 
+import static java.lang.String.format;
+import static java.util.function.Predicate.not;
+
+import eu.europeana.corelib.definitions.edm.entity.ChangeLog;
+import eu.europeana.corelib.definitions.edm.entity.EuropeanaAggregation;
+import eu.europeana.corelib.solr.bean.impl.FullBeanImpl;
+import eu.europeana.corelib.solr.entity.AggregationImpl;
+import eu.europeana.corelib.solr.entity.ChangeLogImpl;
+import eu.europeana.corelib.solr.entity.EuropeanaAggregationImpl;
+import eu.europeana.corelib.solr.entity.ProxyImpl;
 import eu.europeana.indexing.exception.IndexerRelatedIndexingException;
 import eu.europeana.indexing.exception.IndexingException;
 import eu.europeana.indexing.exception.SetupRelatedIndexingException;
@@ -7,22 +17,23 @@ import eu.europeana.indexing.fullbean.StringToFullBeanConverter;
 import eu.europeana.indexing.tiers.model.TierResults;
 import eu.europeana.indexing.utils.RdfWrapper;
 import eu.europeana.metis.schema.jibx.RDF;
+import eu.europeana.metis.utils.DepublicationReason;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
+import java.util.Optional;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.stream.Stream;
 import org.apache.solr.client.solrj.SolrServerException;
+import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
  * Implementation of {@link Indexer}.
- *
- * @author jochen
  */
 public class IndexerImpl implements Indexer {
 
@@ -74,10 +85,10 @@ public class IndexerImpl implements Indexer {
   }
 
   @Override
-  public void index(InputStream recordInputStream, IndexingProperties indexingProperties)
+  public void index(InputStream rdfInputStream, IndexingProperties indexingProperties)
       throws IndexingException {
     final StringToFullBeanConverter stringToRdfConverter = stringToRdfConverterSupplier.get();
-    indexRdf(stringToRdfConverter.convertToRdf(recordInputStream), indexingProperties);
+    indexRdf(stringToRdfConverter.convertToRdf(rdfInputStream), indexingProperties);
   }
 
   @Override
@@ -86,17 +97,17 @@ public class IndexerImpl implements Indexer {
     final RDF rdfRecord = stringToRdfConverterSupplier.get().convertToRdf(recordContent);
     final List<TierResults> result = new ArrayList<>();
     indexRecords(List.of(rdfRecord), indexingProperties, result::add);
-    return result.get(0);
+    return result.getFirst();
   }
 
   @Override
-  public void indexRdf(RDF rdfRecord, IndexingProperties indexingProperties) throws IndexingException {
-    indexRdfs(List.of(rdfRecord), indexingProperties);
+  public void indexRdf(RDF rdf, IndexingProperties indexingProperties) throws IndexingException {
+    indexRdfs(List.of(rdf), indexingProperties);
   }
 
   @Override
-  public void index(String stringRdfRecord, IndexingProperties indexingProperties) throws IndexingException {
-    index(List.of(stringRdfRecord), indexingProperties);
+  public void index(String rdfString, IndexingProperties indexingProperties) throws IndexingException {
+    index(List.of(rdfString), indexingProperties);
   }
 
   @Override
@@ -124,6 +135,86 @@ public class IndexerImpl implements Indexer {
   @Override
   public boolean remove(String rdfAbout) throws IndexerRelatedIndexingException {
     return this.connectionProvider.getIndexedRecordAccess().removeRecord(rdfAbout);
+  }
+
+  @Override
+  public FullBeanImpl getTombstone(String rdfAbout) {
+    return this.connectionProvider.getIndexedRecordAccess().getTombstoneFullbean(rdfAbout);
+  }
+
+  @Override
+  public boolean indexTombstone(String rdfAbout, DepublicationReason depublicationReason) throws IndexingException {
+    if (depublicationReason == DepublicationReason.LEGACY) {
+      throw new IndexerRelatedIndexingException(
+          format("Depublication reason %s, is not allowed", depublicationReason));
+    }
+    final FullBeanImpl publishedFullbean = this.connectionProvider.getIndexedRecordAccess().getFullbean(rdfAbout);
+    if (publishedFullbean != null) {
+      final FullBeanPublisher publisher = connectionProvider.getFullBeanPublisher(true);
+      final FullBeanImpl tombstoneFullbean = prepareTombstoneFullbean(publishedFullbean, depublicationReason);
+      try {
+        publisher.publishTombstone(tombstoneFullbean, tombstoneFullbean.getTimestampCreated());
+      } catch (IndexingException e) {
+        throw new IndexerRelatedIndexingException("Could not create tombstone record '" + rdfAbout + "'.", e);
+      }
+    }
+    return publishedFullbean != null;
+  }
+
+  private FullBeanImpl prepareTombstoneFullbean(FullBeanImpl publishedFullbean, DepublicationReason depublicationReason) {
+    final FullBeanImpl tombstoneFullbean = new FullBeanImpl();
+    tombstoneFullbean.setAbout(publishedFullbean.getAbout());
+    tombstoneFullbean.setTimestampCreated(publishedFullbean.getTimestampCreated());
+    tombstoneFullbean.setTimestampUpdated(publishedFullbean.getTimestampUpdated());
+
+    tombstoneFullbean.setEuropeanaAggregation(
+        prepareEuropeanaAggregation(publishedFullbean.getEuropeanaAggregation(), depublicationReason));
+    tombstoneFullbean.setAggregations(List.of(prepareAggregation(publishedFullbean.getAggregations().getFirst())));
+    final Optional<ProxyImpl> providerProxy =
+        publishedFullbean.getProxies().stream().filter(not(ProxyImpl::isEuropeanaProxy)).findFirst();
+    providerProxy.ifPresent(proxy -> tombstoneFullbean.setProxies(List.of(prepareProxy(proxy))));
+    return tombstoneFullbean;
+  }
+
+  private static EuropeanaAggregation prepareEuropeanaAggregation(EuropeanaAggregation europeanaAggregation,
+      DepublicationReason depublicationReason) {
+
+    final ChangeLog tombstoneChangeLog = new ChangeLogImpl();
+    tombstoneChangeLog.setType("Delete");
+    tombstoneChangeLog.setContext(depublicationReason.getUrl());
+    tombstoneChangeLog.setEndTime(new Date());
+    final EuropeanaAggregation tombstoneEuropeanaAggregation = new EuropeanaAggregationImpl();
+    tombstoneEuropeanaAggregation.setAbout(europeanaAggregation.getAbout());
+    tombstoneEuropeanaAggregation.setChangeLog(List.of(tombstoneChangeLog));
+    tombstoneEuropeanaAggregation.setEdmPreview(europeanaAggregation.getEdmPreview());
+    return tombstoneEuropeanaAggregation;
+  }
+
+  private static @NotNull AggregationImpl prepareAggregation(AggregationImpl aggregation) {
+    final AggregationImpl tombstoneAggregation = new AggregationImpl();
+    tombstoneAggregation.setAbout(aggregation.getAbout());
+    tombstoneAggregation.setEdmDataProvider(aggregation.getEdmDataProvider());
+    tombstoneAggregation.setEdmProvider(aggregation.getEdmProvider());
+    tombstoneAggregation.setEdmObject(aggregation.getEdmObject());
+    tombstoneAggregation.setEdmIntermediateProvider(aggregation.getEdmIntermediateProvider());
+    tombstoneAggregation.setEdmIsShownAt(aggregation.getEdmIsShownAt());
+    tombstoneAggregation.setEdmIsShownBy(aggregation.getEdmIsShownBy());
+    return tombstoneAggregation;
+  }
+
+  private static @NotNull ProxyImpl prepareProxy(ProxyImpl providerProxy) {
+    final ProxyImpl tombstoneProviderProxy = new ProxyImpl();
+    tombstoneProviderProxy.setAbout(providerProxy.getAbout());
+    tombstoneProviderProxy.setEuropeanaProxy(false);
+    tombstoneProviderProxy.setDcTitle(providerProxy.getDcTitle());
+    tombstoneProviderProxy.setDcDescription(providerProxy.getDcDescription());
+    tombstoneProviderProxy.setDcIdentifier(providerProxy.getDcIdentifier());
+    tombstoneProviderProxy.setDcCreator(providerProxy.getDcCreator());
+    tombstoneProviderProxy.setDcContributor(providerProxy.getDcContributor());
+    tombstoneProviderProxy.setEdmRights(providerProxy.getEdmRights());
+    tombstoneProviderProxy.setDcRights(providerProxy.getDcRights());
+    tombstoneProviderProxy.setDctermsIsReferencedBy(providerProxy.getDctermsIsReferencedBy());
+    return tombstoneProviderProxy;
   }
 
   @Override
